# vietocr

./: .gitignore  README.md  README_WINDOWS.md  config.yml  optimizer.py  predict.py  pyproject.toml  requirement.txt  setup.cfg  setup.py  transformer.py  transformerocr.py  vgg.py  vietocr_gettingstart.ipynb  vocab.py
config/: base.yml  resnet-transformer.yml  resnet_fpn_transformer.yml  vgg-convseq2seq.yml  vgg-decoderseq2seq.yml  vgg-seq2seq.yml  vgg-transformer.yml
src/: setup.py
src/config/: resnet-transformer.yml  vgg-seq2seq.yml  vgg-transformer.yml
src/vietocr/: predict.py
src/viocr/: predict.py  train.py
tool/: detector.py  translate.py
transformerocr/: predict.py  train.py
transformerocr/config/: vgg-transformer.yml
transformerocr/loader/: DataLoader.py
transformerocr/model/: trainer.py  transformer.py  transformerocr.py
transformerocr/tests/: utest.py
transformerocr/tool/: .visualizer.py.swp  config.py  detector.py  download_weights.py  translate.py  utils.py  visualizer.py
vietocr/: __init__.py  predict.py  train.py
vietocr/loader/: .DataLoader.py.swp  .dataloader.py.swp  DataLoader.py  aug.py  dataloader.py  dataloader_v1.py
vietocr/model/: .beam.py.swp  .resnet.py.swp  .trainer.py.swp  .transformer.py.swp  .transformerocr.py.swp  beam.py  cnn.py  convseq2seq.py  resnet.py  resnet_fpn.py  seq2seq.py  seq2seqv2.py  trainer.py  transformer.py  transformerocr.py  transformerv2.py  vgg.py  vocab.py
vietocr/optim/: .optim.py.swp  labelsmoothingloss.py  optim.py
vietocr/tests/: utest.py
vietocr/tool/: .detector.py.swp  .utils.py.swp  (+10 more)
(+27 files in other folders)
